# baseN

./: .gitignore  CMakeLists.txt  baseN.cbp  test.sh
include/: BYTE.h  SD.h  base  baseN.h  baseN_N.h  bytes.h
src/: baseN.cpp  main.cpp
test/: a.out  test.cpp
